--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-fullscreen": "^0.1.0",
-    "react-highcharts": "^16.0.2"
+    "react-highcharts": "^16.0.2",
+    "react-router-dom": "^4.2.2"
   }
 }
